--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -132,6 +132,10 @@ a:hover {
 	/*background-color: yellow;*/
 }
 
+.project-content h4 {
+	padding-top: 10px;
+}
+
 .home-page-link > a {
 	margin-bottom: 8px;
 	transition: all 0.5s ease;
