--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -1,5 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,600';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600';
 
 
 html {
