--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -171,7 +171,7 @@ p {
 }
 
 .page-content {
-	min-height: 600px;
+	/*min-height: 600px;*/
 	/*overflow: auto;*/
 }
 
@@ -257,6 +257,17 @@ a:hover {
 
 .project-content h4 {
 	padding-top: 10px;
+}
+
+.tag-button:focus, .tag-button:active:focus, .tag-button.active:focus {
+	outline: none;
+	outline-style: none;
+	box-shadow: none;
+}
+
+.tag-button:active:focus {
+	color: white;
+	background-color: black;
 }
 
 .home-page-links {
