--- a/css/custom.scss
+++ b/css/custom.scss
@@ -27,7 +27,7 @@ $color-two: #fff;
 	background: -moz-linear-gradient(-45deg, $color-one 0%, $color-two 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(-45deg, $color-one 0%, $color-two 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(135deg, $color-one 0%, $color-two 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-one', endColorstr='$color-two', GradientType=1); /* IE6-9 fallback on horizontal gradient */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="$color-one", endColorstr="$color-two", GradientType=1); /* IE6-9 fallback on horizontal gradient */
 }
 
 .background-two {
@@ -36,7 +36,7 @@ $color-two: #fff;
 	background: -moz-linear-gradient(top, $color-one 0%, $color-two 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, $color-one 0%, $color-two 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom, $color-one 0%, $color-two 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-one', endColorstr='$color-two', GradientType=0); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="$color-one", endColorstr="$color-two", GradientType=0); /* IE6-9 */
 }
 
 .background-three {
@@ -45,7 +45,7 @@ $color-two: #fff;
 	background: -moz-linear-gradient(left, $color-one 0%, $color-two 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(left, $color-one 0%, $color-two 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to right, $color-one 0%, $color-two 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-one', endColorstr='$color-two', GradientType=1); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="$color-one", endColorstr="$color-two", GradientType=1); /* IE6-9 */
 }
 
 /* - - - - - - - - GRADIENT BACKGROUNDS - - - - - - - - */
@@ -70,7 +70,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-	font-family: 'Circular', sans-serif;
+	font-family: "Circular", sans-serif;
 	font-weight: bold;
 }
 
@@ -81,6 +81,7 @@ a {
 	&:hover, &:visited, &:active, &:focus {
 		text-decoration: none;
 		color: inherit;
+		font-weight: bold;
 	}
 
 }
@@ -113,18 +114,20 @@ a {
 }
 
 #landing, #projects, #contact {
-	//border-bottom: 1px black solid;
+	//border-bottom: 1px gray dotted;
 	padding-bottom: 50px;
 }
 
 #contact {
-	font-weight: normal;
-	color: white;
-	background-color: black;
+	font-weight: bold;
+	color: black;
+	//background-color: black;
 }
 
-#projects {
-	//background-color: #faf2cc;
+.container-fluid {
+	//background-color: rgba(0,0,0,0.01);
+	background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(0,0,0,0.1));
+
 }
 
 .project-card {
@@ -136,8 +139,14 @@ a {
 		padding: 25px;
 	}
 
+	.project-image img {
+		border: 1px solid gray;
+
+	}
+
 	.project-stack {
-		font-size: .8rem;
+		font-family: "Courier New", monospace;
+		margin-bottom: 0;
 	}
 
 	.project-link {
@@ -147,6 +156,11 @@ a {
 		display: inline-block;
 		padding: 3px 10px;
 	}
+}
+
+.contact-link {
+	font-family: "Courier New", monospace;
+	font-weight: normal;
 }
 
 #particles-js {
