--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -97,3 +97,45 @@ p {
 .about-me-image {
   max-width: 300px;
 }
+
+// [PROJECTS]
+.project-grid {
+  height: 70vh;
+  border: 1px solid red;
+
+  //[class^="col-"] {
+  //  padding: 0;
+  //}
+  //#project1 {
+  //  //width: 100%;
+  //  //height: 30%;
+  //}
+  //#project3 {
+  //  //width: 30%;
+  //  //height: 35%;
+  //}
+  //#project4 {
+  //  //width: 30%;
+  //  //height: 35%;
+  //}
+  //#project5 {
+  //  //width: 70%;
+  //  //height: 70%;
+  //}
+  .project-grid-left-col,
+  .project-grid-right-col {
+    padding: 0;
+  }
+}
+
+.project-box {
+  border: 1px solid rgba(0, 255, 255, 0.24);
+  background-color: rgba(255, 0, 255, 0.24);
+  flex: 1;
+
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-content: center;
+  flex-direction: column;
+}
