--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -99,43 +99,34 @@ p {
 }
 
 // [PROJECTS]
-.project-grid {
-  height: 70vh;
+.projects-container {
   border: 1px solid red;
-
-  //[class^="col-"] {
-  //  padding: 0;
-  //}
-  //#project1 {
-  //  //width: 100%;
-  //  //height: 30%;
-  //}
-  //#project3 {
-  //  //width: 30%;
-  //  //height: 35%;
-  //}
-  //#project4 {
-  //  //width: 30%;
-  //  //height: 35%;
-  //}
-  //#project5 {
-  //  //width: 70%;
-  //  //height: 70%;
-  //}
-  .project-grid-left-col,
-  .project-grid-right-col {
-    padding: 0;
-  }
 }
 
 .project-box {
   border: 1px solid rgba(0, 255, 255, 0.24);
-  background-color: rgba(255, 0, 255, 0.24);
-  flex: 1;
+  background-color: rgba(255, 0, 255, 0.2);
+  margin-bottom: 10px;
 
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-content: center;
-  flex-direction: column;
+  .project-img {
+    flex: 1;
+    img {
+      width: 100%;
+    }
+  }
+
+  .project-text {
+    flex: 1;
+    justify-content: center;
+    align-content: center;
+    h1 {
+      font-size: 2rem;
+    }
+    h2 {
+      font-size: 1.2rem;
+    }
+    p {
+      font-size: 0.9rem;
+    }
+  }
 }
